--- a/404.html
+++ b/404.html
@@ -2,26 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>Training Record</title>
     <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script checks to see if a redirect is present in the query string,
-      // converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...)
+      // GitHub Pages SPA 404 重導
       (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
+        // 取得完整路徑（移除 /training-record 前綴）
+        var path = l.pathname.replace('/training-record', '') || '/';
+        var query = l.search || '';
+        var hash = l.hash || '';
+        
+        // 重導到根路徑，並將原始路徑編碼到查詢參數中
+        var redirect = '/training-record/?p=' + encodeURIComponent(path) + 
+                      (query ? '&q=' + encodeURIComponent(query.slice(1)) : '') +
+                      (hash ? '&h=' + encodeURIComponent(hash.slice(1)) : '');
+        
+        window.location.replace(redirect);
       }(window.location))
     </script>
   </head>
   <body>
+    <p>Redirecting...</p>
   </body>
 </html>
